# sample

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Doxyfile  DoxygenLayout.xml  Jenkinsfile  Makefile  MathUtilsTest  README.md  cmake_install.cmake  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  main_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.map  main_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.md5  math__utils_8cpp.html  math__utils_8cpp__incl.map  math__utils_8cpp__incl.md5  math__utils_8h.html  math__utils_8h__dep__incl.map  math__utils_8h__dep__incl.md5  math__utils_8h_source.html  menudata.js  runTests
.github/workflows/: docs.yml
Testing/Temporary/: CTestCostData.txt
coverage/: index-sort-f.html  index-sort-l.html  index.html
coverage/src/: index-sort-f.html  index-sort-l.html  index.html  math_utils.cpp.func-c.html  math_utils.cpp.func.html  math_utils.cpp.gcov.html
search/: all_0.js  all_1.js  files_0.js  functions_1.js
src/: main.cpp  math_utils.cpp  math_utils.h
test/: testing.cpp
